horizontal scroll issue

--- a/src/styles/partials/_creatures.scss
+++ b/src/styles/partials/_creatures.scss
@@ -1,7 +1,6 @@
 @import '_variables.scss';
 
 .creatures {
-  max-width: 100vw;
   position: absolute;
   height: 11000px;
 
