--- a/src/styles/partials/_oceanBG.scss
+++ b/src/styles/partials/_oceanBG.scss
@@ -1,8 +1,6 @@
 @import "./variables";
 
 div.oceanBG {
-    max-width: 100vw;
-    overflow-x: hidden;
     width: 100%;
     height: 11400px;
     background-image: linear-gradient(#00FFFF 2%, #00CED1 10%, #191970 40%, #000 60%);
